[package]
name = 'uiua'
version = '0.1.0'
authors = ['Kai Schmidt <kaikaliischmidt@gmail.com>']
edition = '2018'

[dependencies]
structopt = '0.3.20'
itertools = '0.9.0'
thiserror = '1.0.22'
unicode_reader = '1.0.1'
sha3 = '0.9.1'
notify = '4.0.12'
colored = '2'
pathdiff = '0.2.0'
serde.version = '1.0.117'
serde.features = ['derive']
rmp-serde = '0.14.4'
once_cell = '1.5.2'
hex = '0.4.2'
rayon = '1.5.0'
toml = '0.5.7'